--- a/project-7/src/index.css
+++ b/project-7/src/index.css
@@ -2,90 +2,88 @@
 @tailwind components;
 @tailwind utilities;
 
-
-html,body{
-    background-color: #eef5ff;
-    font-family: 'Ubuntu', sans-serif;
-    -webkit-tap-highlight-color: transparent;
-
+html,
+body {
+  background-color: #eef5ff;
+  font-family: "Ubuntu", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
-    
-
-
-.svg-background{
-    background-image: url(./assets/bg-sidebar-mobile.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+.svg-background {
+  background-image: url(./assets/bg-sidebar-mobile.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
+@media (min-width: 768px) {
+  .svg-background {
+    background-image: url(./assets/bg-sidebar-desktop.svg);
+  }
+}
 
 /* The switch - the box around the slider */
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 24px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input + .slider {
-    background-color: #04285c;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #04285c;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(16px);
-    -ms-transform: translateX(16px);
-    transform: translateX(16px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
- 
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
 
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
- .checkbox-color{
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input + .slider {
+  background-color: #04285c;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #04285c;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.checkbox-color {
   filter: hue-rotate(28deg) !important;
- }
+}
